cleaned up css; fixed toggle btn on mobile landscape

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -196,7 +196,7 @@ body {
     flex-direction: column;
     width: 300px;
     min-height: 100dvh;
-    background: var(--mobile-navbar-bg-color);
+    background: var(--body-bg-color);
     font-size: 1.1rem;
     letter-spacing: 0.2rem;
     box-shadow: 0 1px 20px rgba(0, 0, 0, 0.5);
@@ -252,7 +252,7 @@ body {
     align-items: center;
     width: 100%;
     padding: 1rem 3rem;
-    color: var(--mobile-navbar-bg-color);
+    color: var(--body-bg-color);
     background-color: var(--mobile-navbar-toggle-btn-bg-color);
 }
 
@@ -809,7 +809,7 @@ footer {
         flex-direction: column;
         width: 600px;
         height: 100dvh;
-        background: var(--mobile-navbar-bg-color);
+        background: var(--body-bg-color);
         font-size: 1.1rem;
         letter-spacing: 0.2rem;
         box-shadow: 0 1px 20px rgba(0, 0, 0, 0.5);
@@ -836,7 +836,7 @@ footer {
         align-items: center;
         width: 100%;
         padding: 2rem 3rem;
-        color: var(--mobile-navbar-bg-color);
+        color: var(--body-bg-color);
         background-color: var(--mobile-navbar-toggle-btn-bg-color);
         font-weight: 500;
         text-transform: uppercase;
@@ -986,6 +986,10 @@ footer {
 
     #navigation-mobile-menu .nav-links li:first-child a {
         margin-top: 0;
+    }
+
+    .mobile-dark-light-toggle-btn {
+        padding: 0.5rem 3rem;
     }
 }
 
